src/snapshots/hooklistener__tests__help_cases.snap
---
source: src/main.rs
expression: "render_help_snapshot(&[\"cases\"])"
---
Save captured requests as cases, then replay or run them against a target

Usage: hooklistener cases [OPTIONS] <COMMAND>

Commands:
  list    List saved cases for an endpoint
  save    Save a captured request as a case
  show    Show a saved case and its assertions
  update  Update a saved case (omitted fields remain unchanged)
  replay  Queue one saved case for delivery by the service or an active CLI listener
  run     Run saved cases for an endpoint
  suites  Discover named suites and their members
  runs    Inspect run history and wait for existing runs without requeueing
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --json               Output supported command responses or event streams as JSON
      --color <COLOR>      Styling policy for human output [default: auto] [possible values: auto,
                           always, never]
      --yes                Confirm destructive commands without an interactive prompt
      --log-level <LEVEL>  Log level [default: info] [possible values: trace, debug, info, warn,
                           error]
      --log-dir <DIR>      Directory for log files
      --log-stdout         Also write logs to stdout
