src/snapshots/hooklistener__tests__help_cases_run.snap
---
source: src/main.rs
expression: "render_help_snapshot(&[\"cases\", \"run\"])"
---
Run saved cases for an endpoint

Usage: hooklistener cases run [OPTIONS] <ENDPOINT_ID>

Arguments:
  <ENDPOINT_ID>  Debug endpoint ID

Options:
      --target <TARGET>           Target: a service-side URL, a saved target ID, or cli for an
                                  active listen session
      --target-name <NAME>        Display name recorded for the target
      --case-suite-id <SUITE_ID>  Run only this named suite (see cases suites list)
      --wait                      Wait for completion using read-only polling; timeout does not
                                  cancel delivery
      --timeout <DURATION>        Maximum wait, such as 60, 2m, or 1h (up to 1h) [default: 30s]
      --interval <DURATION>       Read-only polling interval, such as 500ms or 2s (100ms to 30s)
                                  [default: 250ms]
      --idempotency-key <KEY>     Delivery key; reuse with identical inputs to recover a lost
                                  receipt [default: new UUID]
      --dry-run                   Server preview of scope and target policy; queues no delivery
  -o, --org <ORG_ID>              Organization ID (overrides the configured default)
  -h, --help                      Print help

Global options:
      --json               Output supported command responses or event streams as JSON
      --color <COLOR>      Styling policy for human output [default: auto] [possible values: auto,
                           always, never]
      --yes                Confirm destructive commands without an interactive prompt
      --log-level <LEVEL>  Log level [default: info] [possible values: trace, debug, info, warn,
                           error]
      --log-dir <DIR>      Directory for log files
      --log-stdout         Also write logs to stdout
