src/snapshots/hooklistener__tests__help_endpoint_list.snap
---
source: src/main.rs
expression: "render_help_snapshot(&[\"endpoint\", \"list\"])"
---
List debug endpoints for an organization

Usage: hooklistener endpoint list [OPTIONS]

Options:
  -o, --org <ORG_ID>  Organization ID (overrides the configured default)
  -h, --help          Print help

Global options:
      --json               Output supported command responses or event streams as JSON
      --color <COLOR>      Styling policy for human output [default: auto] [possible values: auto,
                           always, never]
      --yes                Confirm destructive commands without an interactive prompt
      --log-level <LEVEL>  Log level [default: info] [possible values: trace, debug, info, warn,
                           error]
      --log-dir <DIR>      Directory for log files
      --log-stdout         Also write logs to stdout
