src/snapshots/hooklistener__tests__help_monitor.snap
---
source: src/main.rs
expression: "render_help_snapshot(&[\"monitor\"])"
---
Create and inspect uptime monitors

Usage: hooklistener monitor [OPTIONS] <COMMAND>

Commands:
  create  Create an uptime monitor
  list    List uptime monitors
  show    Show an uptime monitor
  update  Update an uptime monitor
  delete  Delete an uptime monitor
  checks  List recent checks for a monitor
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --json               Output supported command responses or event streams as JSON
      --color <COLOR>      Styling policy for human output [default: auto] [possible values: auto,
                           always, never]
      --yes                Confirm destructive commands without an interactive prompt
      --log-level <LEVEL>  Log level [default: info] [possible values: trace, debug, info, warn,
                           error]
      --log-dir <DIR>      Directory for log files
      --log-stdout         Also write logs to stdout
